--- a/.github/workflows/ci-model-regression-on-schedule.yml
+++ b/.github/workflows/ci-model-regression-on-schedule.yml
@@ -379,7 +379,8 @@ jobs:
         if: steps.performance.outputs.is_dropped == 'true'
         id: pick_assignee
         run: |
-          ASSIGNEES_LIST=("dakshvar22" "Ghostvv" "JEM-Mosig" "tttthomasssss" "samsucik" "koernerfelicia" "kedz" "aeshky")
+          # ASSIGNEES_LIST=("dakshvar22" "Ghostvv" "JEM-Mosig" "tttthomasssss" "samsucik" "koernerfelicia" "kedz" "aeshky")
+          ASSIGNEES_LIST=("HotThoughts")
           # Randomly select an item from assignees list
           ASSIGNEE=${ASSIGNEES_LIST[ $(( RANDOM % ${#ASSIGNEES_LIST[@]} )) ]}
           echo "::set-output name=assignee::$ASSIGNEE"
